[project]
name = "bootcamp-13"
version = "0.1.0"
description = ""
authors = [
    {name = "Nathan Vinicius",email = "limavinicius195@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pydentic (>=0.0.1.dev3,<0.0.2)",
    "pydantic (>=2.12.3,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "db (>=0.1.1,<0.2.0)",
    "controller (>=0.1.0,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
